infrastructure/apps/trino/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trino
  labels:
    app.kubernetes.io/name: trino
    app.kubernetes.io/part-of: data-platform
