infrastructure/apps/trino/base/trino-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-worker
  labels:
    app: trino
    role: worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: trino
      role: worker
  template:
    metadata:
      labels:
        app: trino
        role: worker
    spec:
      containers:
        - name: trino
          image: trinodb/trino:438
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/trino
            - name: trino-secret
              mountPath: /etc/trino/ssl
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: trino-config-worker
            items:
              - key: node.properties
                path: node.properties
              - key: jvm.config
                path: jvm.config
              - key: config.properties
                path: config.properties
              - key: log.properties
                path: log.properties
        - name: trino-secret
          secret:
            secretName: trino-secret
