infrastructure/apps/trino/base/trino-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trino
  labels:
    app: trino
spec:
  selector:
    app: trino
    role: coordinator
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
