infrastructure/apps/trino/base/trino-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: trino
spec:
  ingressClassName: nginx
  rules:
    - host: trino.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trino
                port:
                  number: 8080
